--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,3 +33,14 @@ onesignal:
       check-template-location: false
 googlemap:
   key: ${googlemap.key}
+  
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${google.client.id}
+            client-secret: ${google.client.secret}
+          github:
+            clientId: ${github.client.id}
+            clientSecret: ${github.client.secret}
